[gd_scene load_steps=13 format=3 uid="uid://dpfkju1d15fk2"]

[ext_resource type="Script" path="res://Scripts/ScriptCharacters/dummy.gd" id="9_n4ddw"]
[ext_resource type="Texture2D" uid="uid://53nvlkgyaod1" path="res://Assets/Dummy/dummy_hit.png" id="10_ga15w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h0ut8"]
atlas = ExtResource("10_ga15w")
region = Rect2(0, 0, 64, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubgnc"]
atlas = ExtResource("10_ga15w")
region = Rect2(64, 0, 64, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt3er"]
atlas = ExtResource("10_ga15w")
region = Rect2(128, 0, 64, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c0f8"]
atlas = ExtResource("10_ga15w")
region = Rect2(192, 0, 64, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kduh"]
atlas = ExtResource("10_ga15w")
region = Rect2(256, 0, 64, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_aylty"]
atlas = ExtResource("10_ga15w")
region = Rect2(320, 0, 64, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0xhi"]
atlas = ExtResource("10_ga15w")
region = Rect2(384, 0, 64, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_p41rk"]
atlas = ExtResource("10_ga15w")
region = Rect2(448, 0, 64, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_4lc7h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0ut8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubgnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt3er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c0f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kduh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aylty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0xhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p41rk")
}],
"loop": true,
"name": &"dummy",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ygqa"]
size = Vector2(11, 30.0001)

[node name="Dummy" type="Area2D" groups=["enemigos", "nodo"]]
z_index = 2
texture_filter = 1
script = ExtResource("9_n4ddw")

[node name="Sprite" type="AnimatedSprite2D" parent="." groups=["sprites"]]
texture_filter = 1
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_4lc7h")
animation = &"dummy"

[node name="Hitbox" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(0.500002, -9.11951e-06)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_6ygqa")

[node name="SombraMark" type="Marker2D" parent="."]
texture_filter = 1
position = Vector2(-24, 39.5)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_looped" from="Sprite" to="." method="_on_sprite_animation_looped"]
